[i18n] catalan Update various translations
(Old svn revision: 21649)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-13  Pau Rul-lan Ferragut <paurullan@bulma.net>
+
+	* ca.po: updated catalan translation.
+
 2006-05-13  Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>
 
 	* zh_TW.po: Update traditional Chinese translation.
@@ -7,7 +11,6 @@
 	* pl.po: Updated Polish translations by Szymon Kalasz
 	  <szymon_maestro@gazeta.pl>.
 
->>>>>>> .r21637
 2006-05-07 Piarres Beobide <pi@beobide.net>
 
 	* eu.po: Basque translation update.
