--- a/po/ca.po
+++ b/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-06 04:20+0900\n"
-"PO-Revision-Date: 2006-03-18 20:21+0100\n"
+"PO-Revision-Date: 2006-05-13 22:16+0200\n"
 "Last-Translator: Pau Rul.lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
@@ -171,7 +171,7 @@ msgstr ""
 
 #: ../panel/panel-dialogs.c:526
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "Afegeix elements al quadre"
 
 #: ../panel/panel-dialogs.c:556
 msgid ""
@@ -339,7 +339,7 @@ msgstr "LED "
 
 #: ../plugins/clock/clock.c:453 ../plugins/systray/systray.c:407
 msgid "Show _frame"
-msgstr "Mostra marc"
+msgstr "Mostra _marc"
 
 #: ../plugins/clock/clock.c:461
 msgid "Clock Options"
@@ -347,7 +347,7 @@ msgstr "Opcions del rellotge"
 
 #: ../plugins/clock/clock.c:471
 msgid "Use 24-_hour clock"
-msgstr "Utilitza estil de 24 hores"
+msgstr "Utilitza estil de 24 _hores"
 
 #: ../plugins/clock/clock.c:479
 msgid "Show AM/PM"
@@ -467,7 +467,7 @@ msgstr "Executa en un _terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:682
 msgid "Use _startup notification"
-msgstr "Mostra notificació d'engegada"
+msgstr "Mo_stra notificació d'engegada"
 
 #: ../plugins/launcher/launcher-dialog.c:1264
 msgid ""
@@ -596,12 +596,12 @@ msgstr "Agrupa sempre les tasques"
 #: ../plugins/windowlist/windowlist.c:226
 #, c-format
 msgid "Are you sure you want to remove workspace %d?"
-msgstr ""
+msgstr "Esteu segurs de voler suprimir l'espai de treball %d?"
 
 #: ../plugins/windowlist/windowlist.c:227
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr ""
+msgstr "Esteu segurs de voler suprimir l'espai de treball '%s'?"
 
 #: ../plugins/windowlist/windowlist.c:428
 #, c-format
@@ -634,54 +634,48 @@ msgstr "Llista de finestres"
 msgid ""
 "<i>Urgency notification</i> will blink the button when an application needs "
 "attention."
-msgstr ""
+msgstr "Les <i>notificacions urgents</i> faran pipelletjar els botons quan una aplicació demani de la vostra atenció."
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:160
-#, fuzzy
 msgid "Urgency Notification"
-msgstr "Mostra notificació d'engegada"
+msgstr "Notificació urgent"
 
 #: ../plugins/windowlist/windowlist-dialog.c:167
 msgid "_Disabled"
-msgstr ""
+msgstr "_Desactivat"
 
 #: ../plugins/windowlist/windowlist-dialog.c:176
 msgid "For _other workspaces"
-msgstr ""
+msgstr "Per els _altres espais de treball"
 
 #: ../plugins/windowlist/windowlist-dialog.c:185
-#, fuzzy
 msgid "For _all workspaces"
-msgstr "Mostr_a les tasques de totes les àrees de treball"
+msgstr "Per totes les àrees de treb_all"
 
 #: ../plugins/windowlist/windowlist-dialog.c:199
-#, fuzzy
 msgid "_Icon button"
-msgstr "Botons d'accions"
+msgstr "Botó d'_icones"
 
 #: ../plugins/windowlist/windowlist-dialog.c:206
 msgid "A_rrow button"
-msgstr ""
+msgstr "B_otó fletxa"
 
 #: ../plugins/windowlist/windowlist-dialog.c:224
-#, fuzzy
 msgid "Show _windows from all workspaces"
-msgstr "Mostr_a les tasques de totes les àrees de treball"
+msgstr "Mostr_a les finestres de totes les àrees de treball"
 
 #: ../plugins/windowlist/windowlist-dialog.c:233
-#, fuzzy
 msgid "Show a_pplication icons"
-msgstr "Mostra els _noms de les aplicacions"
+msgstr "Mostra les icones de les a_plicacions"
 
 #: ../plugins/windowlist/windowlist-dialog.c:242
 msgid "Show wor_kspace actions"
-msgstr ""
+msgstr "_Mostra les accions dels espais de treball"
 
 #: ../mcs-plugin/plugin.c:46
-#, fuzzy
 msgid "Panel"
-msgstr "Quadre %d"
+msgstr "Quadre"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
@@ -744,6 +738,5 @@ msgid "This plugin has no purpose"
 msgstr "Aquest connector no té propòsit"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Panel Manager"
-msgstr "Gestor de quadres"
+msgstr "Gestor de quadres Xfce4"
