Update strings: new strings were added.
(Old svn revision: 21877)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,12 @@
+2006-05-28  Jasper Huijsmans <jasper@xfce.org>
+
+	* eo.po ta.po cs.po pt_BR.po es.po ko.po eu.po en_GB.po gu.po 
+	  hu.po sk.po vi.po ms.po uk.po ro.po hy.po ru.po pt_PT.po 
+	  nb_NO.po el.po ar.po fr.po et.po nl.po az.po pl.po es_MX.po 
+	  it.po mr.po lt.po ca.po bn_IN.po tr.po fa.po be.po bg.po de.po
+	  sv.po ja.po xfce4-panel.pot  zh_TW.po he.po fi.po hi.po pa.po 
+	  zh_CN.po: make update-po.
+
 2006-05-13  Pau Rul-lan Ferragut <paurullan@bulma.net>
 
 	* ca.po: updated catalan translation.
