Updated Finnish translations.
(Old svn revision: 21879)

--- a/po/fi.po
+++ b/po/fi.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-05-28 17:45+0200\n"
-"PO-Revision-Date: 2006-05-07 10:47+0300\n"
+"POT-Creation-Date: 2006-05-28 19:51+0300\n"
+"PO-Revision-Date: 2006-05-28 19:53+0300\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp2.inet.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -426,7 +426,7 @@ msgstr "Tuottavuus"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "Toimisto"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -437,9 +437,8 @@ msgid "Terminal"
 msgstr "Pääte"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
-msgstr "Kehittäjä"
+msgstr "Ohjelmistokehitys"
 
 #: ../plugins/launcher/launcher-dialog.c:402
 msgid "Select image file"
