[l10n:eu] Basque translation update
(Old svn revision: 21886)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-29 Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Basque translation update.
+
 2006-05-28  Jasper Huijsmans <jasper@xfce.org>
 
 	* eo.po ta.po cs.po pt_BR.po es.po ko.po eu.po en_GB.po gu.po 
