--- a/po/eu.po
+++ b/po/eu.po
@@ -7,10 +7,10 @@
 # Piarres Beobide Egaña <pi@beobide.net>, 2004, 2005, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.3.90.2\n"
+"Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-28 17:45+0200\n"
-"PO-Revision-Date: 2006-03-06 21:37+0100\n"
+"PO-Revision-Date: 2006-05-28 22:20+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: librezale <librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
@@ -38,8 +38,7 @@ msgid "Xfce Panel"
 msgstr "Xfce Panela"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 "Elementu hau paneletik ezabatua izango da eta bere konfigurazioa galdu "
 "egingo da."
@@ -74,7 +73,7 @@ msgstr "Panela Pertsonalizatu"
 
 #: ../panel/panel.c:667
 msgid "Add Items"
-msgstr "Elemetuak Gehitu"
+msgstr "Elementuak Gehitu"
 
 #: ../panel/panel.c:682 ../plugins/actions/actions.c:417
 msgid "Quit"
@@ -127,7 +126,7 @@ msgstr ""
 "XFCE-ren idazmahai ingurunearen zatia\n"
 "http://www.xfce.org\n"
 "\n"
-" GNU GPL Lizentzipean.\n"
+" GNU GPL Lizentziapean.\n"
 "\n"
 
 #: ../panel/main.c:52
@@ -305,7 +304,7 @@ msgstr "Pantaila blokeatu"
 
 #: ../plugins/actions/actions.c:419
 msgid "Quit + Lock screen"
-msgstr "PantaiLa blokeatu + Itxi"
+msgstr "Pantaila blokeatu + Itxi"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -382,7 +381,7 @@ msgstr "Elementu berria"
 
 #: ../plugins/launcher/launcher.c:747 ../plugins/launcher/launcher.c:1310
 msgid "This item has not yet been configured"
-msgstr "Elementu hau ez da konfigruatua izan"
+msgstr "Elementu hau ez da konfiguratua izan"
 
 #: ../plugins/launcher/launcher-dialog.c:101
 msgid "Default"
@@ -430,7 +429,7 @@ msgstr "Produktibitatea"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "Ofimatika"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -441,9 +440,8 @@ msgid "Terminal"
 msgstr "Terminala"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
-msgstr "Garatzailea"
+msgstr "Garapena"
 
 #: ../plugins/launcher/launcher-dialog.c:402
 msgid "Select image file"
@@ -475,7 +473,7 @@ msgstr "_terminalean exekutatu"
 
 #: ../plugins/launcher/launcher-dialog.c:684
 msgid "Use _startup notification"
-msgstr "Erabili _hasiera notifikazioak"
+msgstr "Erabili _hasiera berri emateak"
 
 #: ../plugins/launcher/launcher-dialog.c:1266
 msgid ""
@@ -509,7 +507,7 @@ msgid ""
 "in the meantime. Not adding launcher (but any files downloaded have not been "
 "lost)."
 msgstr ""
-"Zero Instalatzaile Interfazea amaitu da, baina abiarazte elkarrizket "
+"Zero Instalatzaile Interfazea amaitu da, baina abiarazte elkarrizketa "
 "desagertu egin da bitartean. Ez da abiarazlea gehituko (baina deskargaturiko "
 "edozein fitxategi ez da galdu)."
 
@@ -552,12 +550,12 @@ msgstr "Leihoan ezkutatu eta idazmahaia bistarazi"
 
 #: ../plugins/systray/systray.c:69 ../plugins/systray/systray.c:84
 msgid "There is already a system tray running on this screen"
-msgstr "Pantaila honetan ikono bandeja bat martxan dago"
+msgstr "Pantaila honetan sistema barra bat martxan dago"
 
 #: ../plugins/systray/systray.c:90
 #, c-format
 msgid "Unable to register system tray: %s"
-msgstr "Ezinezkoa ikono bandeja erregistratzea: %s"
+msgstr "Ezinezkoa sistema barra erregistratzea: %s"
 
 #: ../plugins/systray/systray.c:378
 #: ../plugins/systray/systray.desktop.in.in.h:2
@@ -583,7 +581,7 @@ msgstr "Erabilgarri dagoen leku dena erabili"
 
 #: ../plugins/tasklist/tasklist.c:451
 msgid "Show tasks from _all workspaces"
-msgstr "Bistarazi idazmahi birtual guztien lanak"
+msgstr "Bistarazi idazmahai birtual guztien lanak"
 
 #: ../plugins/tasklist/tasklist.c:461
 msgid "Show application _names"
@@ -661,7 +659,7 @@ msgstr "Beste _idazmahaientzat"
 
 #: ../plugins/windowlist/windowlist-dialog.c:180
 msgid "For _all workspaces"
-msgstr "Idazmahi _guztiontzat"
+msgstr "Idazmahai _guztiontzat"
 
 #: ../plugins/windowlist/windowlist-dialog.c:194
 msgid "_Icon button"
@@ -673,7 +671,7 @@ msgstr "Ge_zi botoia"
 
 #: ../plugins/windowlist/windowlist-dialog.c:219
 msgid "Show _windows from all workspaces"
-msgstr "Bistarazi idazmahi birtual guztietako leihoak"
+msgstr "Bistarazi idazmahai birtual guztietako leihoak"
 
 #: ../plugins/windowlist/windowlist-dialog.c:228
 msgid "Show a_pplication icons"
@@ -750,3 +748,4 @@ msgstr "Plugin honek ez du zereginik"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 Panel Kudeatzailea:"
+
