Greek translations update
(Old svn revision: 21913)

--- a/po/el.po
+++ b/po/el.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-28 17:45+0200\n"
-"PO-Revision-Date: 2006-05-06 16:50+0200\n"
+"PO-Revision-Date: 2006-05-30 21:14+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
@@ -430,7 +430,7 @@ msgstr "Παραγωγικότητα"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "Γραφείο"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -441,7 +441,6 @@ msgid "Terminal"
 msgstr "Τερματικό"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
 msgstr "Ανάπτυξη"
 
