Update Hebrew translation
(Old svn revision: 21920)

--- a/po/he.po
+++ b/po/he.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-28 17:45+0200\n"
-"PO-Revision-Date: 2006-05-05 22:24+0300\n"
+"PO-Revision-Date: 2006-05-31 02:02+0300\n"
 "Last-Translator: Yuval Tanny <tanai@int.gov.il>\n"
 "Language-Team: Hebrew\n"
 "MIME-Version: 1.0\n"
@@ -38,8 +38,7 @@ msgid "Xfce Panel"
 msgstr "לוח Xfce"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:577
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr "הפריט יוסר מהלוח ומאפייניו יאבדו."
 
 #. configure, hide by default
@@ -169,7 +168,7 @@ msgstr "כשל בפתיחת מודול \"%s\"."
 
 #: ../panel/panel-dialogs.c:529
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "הוסף פריטים ללוח"
 
 #: ../panel/panel-dialogs.c:559
 msgid ""
@@ -427,7 +426,7 @@ msgstr "פרודוקטיביות"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "משרד"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -438,9 +437,8 @@ msgid "Terminal"
 msgstr "מסוף"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
-msgstr "מפתח"
+msgstr "פיתוח"
 
 #: ../plugins/launcher/launcher-dialog.c:402
 msgid "Select image file"
@@ -636,11 +634,10 @@ msgstr "רשימת חלונות"
 msgid ""
 "<i>Urgency notification</i> will blink the button when an application needs "
 "attention."
-msgstr ""
+msgstr "<i>התראה מידית</i> תהבהב את הכפתור כאשר יישום דורש תשומת לב."
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:155
-#, fuzzy
 msgid "Urgency Notification"
 msgstr "התראה מידית"
 
@@ -743,3 +740,4 @@ msgstr "להרחבה זו אין כל שימוש"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "מנהל לוח Xfce 4"
+
