Updated Japanese translations.
(Old svn revision: 21928)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,10 +1,14 @@
+2006-05-31  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+
 2006-05-20  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Greek translation update.
 
-2006-05-29 Piarres Beobide <pi@beobide.net>
+2006-05-29  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update.
+	* eu.po: Basque translation update.
 
 2006-05-28  Jasper Huijsmans <jasper@xfce.org>
 
