--- a/po/ja.po
+++ b/po/ja.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-28 17:45+0200\n"
-"PO-Revision-Date: 2006-05-06 19:05+0900\n"
+"PO-Revision-Date: 2006-05-31 21:43+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -430,7 +430,7 @@ msgstr "プロダクト"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "オフィス"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -441,9 +441,8 @@ msgid "Terminal"
 msgstr "ターミナル"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
-msgstr "開発者"
+msgstr "開発"
 
 #: ../plugins/launcher/launcher-dialog.c:402
 msgid "Select image file"
