--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-04  Jean-François Wauthy <pollux@xfce.org>
+
+	* fr.po : Updated French translations by Maximilian Schleiss
+	<maxschleiss@bluewin.ch>
+
 2006-06-03  Alexander Toresson <alexander.toresson@gmail.com>
 
 	* sv.po: Updated Swedish translation.
