--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-05  Adriano Winter Bess  <adriano@xfce.org>
+
+	* pt_BR.po: Updated brazilian portuguese translations.
+
 2006-06-04  Jean-François Wauthy <pollux@xfce.org>
 
 	* fr.po : Updated French translations by Maximilian Schleiss
