Updated Polish translations by Szymon Kalasz <szymon_maestro@gazeta.pl>.
(Old svn revision: 22056)

--- a/po/pl.po
+++ b/po/pl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-28 17:45+0200\n"
-"PO-Revision-Date: 2006-05-07 19:50+0200\n"
+"PO-Revision-Date: 2006-06-08 23:00+0200\n"
 "Last-Translator: Szymon Kałasz <szymon_maestro@gazeta.pl>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -428,7 +428,7 @@ msgstr "Produktywność"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "Biuro"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -439,9 +439,8 @@ msgid "Terminal"
 msgstr "Terminal"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
-msgstr "Twórca"
+msgstr "Rozwój"
 
 #: ../plugins/launcher/launcher-dialog.c:402
 msgid "Select image file"
