--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-12  Hydonsingore Cia <hydonsingore@educities.edu.tw>
+
+	* zh_TW.po: Update traditional Chinese translations. 
+
 2006-06-10  Daichi Kawahata <daichi@xfce.org>
 
 	* pl.po: Updated Polish translations by Szymon Kalasz
