--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the xfce4-panel package.
 # umm <umm@pchome.com.tw>, 2003.
 # Ambrose Li <acli@ada.dhs.org>, 2004.
-# Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>, 2005.
+# Hydonsingore Cia <hydonsingore@educities.edu.tw>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-28 17:45+0200\n"
-"PO-Revision-Date: 2006-05-13 12:56+0800\n"
-"Last-Translator: Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>\n"
+"PO-Revision-Date: 2006-06-12 21:48+0800\n"
+"Last-Translator: Hydonsingore Cia <hydonsingore@educities.edu.tw>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -432,7 +432,7 @@ msgstr "生產力"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "Office"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -443,9 +443,8 @@ msgid "Terminal"
 msgstr "終端機"
 
 #: ../plugins/launcher/launcher-dialog.c:115
-#, fuzzy
 msgid "Development"
-msgstr "開發者"
+msgstr "開發"
 
 #: ../plugins/launcher/launcher-dialog.c:402
 msgid "Select image file"
@@ -498,6 +497,10 @@ msgid ""
 "\n"
 "For help using Zero Install, see http://0install.net"
 msgstr ""
+"無法執行 0launch:\n"
+"%s\n"
+"\n"
+"關於 Zero Install 的說明，請參照 http://0install.net"
 
 #: ../plugins/launcher/launcher-dialog.c:1464
 msgid ""
