Some very minor changes to tidy up the contents of the settings menu in swedish, not worthy a changelog entry imho, bitch at me if I'm wrong.
(Old svn revision: 22212)

--- a/po/sv.po
+++ b/po/sv.po
@@ -288,7 +288,7 @@ msgstr "Skapa ny panel"
 #: ../panel/panel-dialogs.c:1528
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
 msgid "Panel Manager"
-msgstr "Panelhanterare"
+msgstr "Panelhanteraren"
 
 #: ../plugins/actions/actions.c:383
 msgid "Panel Actions"
