--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-09  Jean-François Wauthy <pollux@xfce.org>
+
+	* cs.po: Updated Czech translations by Michal Varady
+	<miko.vaji@gmail.com>
+
 2006-06-12  Hydonsingore Cia <hydonsingore@educities.edu.tw>
 
 	* zh_TW.po: Update traditional Chinese translations. 
