Updated Czech translations
(Old svn revision: 22456)

--- a/po/cs.po
+++ b/po/cs.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-28 17:45+0200\n"
-"PO-Revision-Date: 2006-07-06 17:50+0100\n"
+"PO-Revision-Date: 2006-07-12 20:57+0100\n"
 "Last-Translator: Michal Várady <miko.vaji@gmail.com>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -172,7 +172,7 @@ msgstr "Nelze otevřít modul \"%s\"."
 
 #: ../panel/panel-dialogs.c:529
 msgid "Add Items to the Panel"
-msgstr "Přidat položky do panelu"
+msgstr ""
 
 #: ../panel/panel-dialogs.c:559
 msgid "Drag items from the list to a panel or remove them by dragging them back to the list."
@@ -296,7 +296,7 @@ msgstr "Nový Panel"
 #: ../panel/panel-dialogs.c:1528
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
 msgid "Panel Manager"
-msgstr "Správce panelu:"
+msgstr "Správce panelu"
 
 #: ../plugins/actions/actions.c:383
 msgid "Panel Actions"
@@ -312,7 +312,7 @@ msgstr "Uzamknout obrazovku"
 
 #: ../plugins/actions/actions.c:419
 msgid "Quit + Lock screen"
-msgstr "Ukonči a uzamknout obrazovku"
+msgstr "Ukončit a uzamknout obrazovku"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -329,7 +329,7 @@ msgstr "%A, %d. %B %Y"
 #: ../plugins/clock/clock.c:408
 #: ../plugins/clock/clock.desktop.in.in.h:1
 msgid "Clock"
-msgstr "Uzamknout"
+msgstr "Hodiny"
 
 #. Keep order in sync with XfceClockMode
 #: ../plugins/clock/clock.c:439
@@ -442,7 +442,7 @@ msgstr "Produktivita"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr "Kancelář"
+msgstr ""
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -453,8 +453,9 @@ msgid "Terminal"
 msgstr "Terminál"
 
 #: ../plugins/launcher/launcher-dialog.c:115
+#, fuzzy
 msgid "Development"
-msgstr "Vývoj"
+msgstr "Vývojář"
 
 #: ../plugins/launcher/launcher-dialog.c:402
 msgid "Select image file"
@@ -749,5 +750,5 @@ msgstr "Tento modul je bezúčelný"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Správce panelu Xfce4:"
+msgstr "Správce panelu Xfce 4"
 
