--- a/po/fi.po
+++ b/po/fi.po
@@ -2,54 +2,19 @@
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Ilkka Ollakka <ilkka.ollakka@iki.fi>, 2003.
-# Jari Rahkonen <jari.rahkonen@pp2.inet.fi>, 2005-2006.
+# Jari Rahkonen <jari.rahkonen@pp1.inet.fi>, 2005-2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-08-01 20:04+0200\n"
-"PO-Revision-Date: 2006-05-28 19:53+0300\n"
-"Last-Translator: Jari Rahkonen <jari.rahkonen@pp2.inet.fi>\n"
+"POT-Creation-Date: 2006-08-03 15:07+0300\n"
+"PO-Revision-Date: 2006-08-03 15:09+0300\n"
+"Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: ../config/launcher-7.rc.in.h:1
-#, fuzzy
-msgid "Command Prompt"
-msgstr "Komento"
-
-#: ../config/launcher-7.rc.in.h:2
-msgid "X terminal emulator"
-msgstr ""
-
-#: ../config/launcher-8.rc.in.h:1
-msgid "Edit text files"
-msgstr ""
-
-#: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
-msgid "Editor"
-msgstr "Editori"
-
-#: ../config/launcher-9.rc.in.h:1
-#, fuzzy
-msgid "File Manager"
-msgstr "Tiedostonhallinta"
-
-#: ../config/launcher-9.rc.in.h:2
-msgid "Manage files and folders"
-msgstr ""
-
-#: ../config/launcher-10.rc.in.h:1
-msgid "Surf the internet"
-msgstr ""
-
-#: ../config/launcher-10.rc.in.h:2
-#, fuzzy
-msgid "Web Browser"
-msgstr "Ohjeselain"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -396,9 +361,8 @@ msgid "Only show minimized applications"
 msgstr "Näytä vain pienennetyt sovellukset"
 
 #: ../plugins/iconbox/iconbox.c:839
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "Näytä k_aikkien työtilojen ikkunat"
+msgstr "Näytä kaikkien työtilojen sovellukset"
 
 #: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
 #, c-format
@@ -410,18 +374,22 @@ msgstr "Kohdetta \"%s\" ei voitu suorittaa"
 msgid "Error in command \"%s\""
 msgstr "Virhe komennossa \"%s\""
 
-#: ../plugins/launcher/launcher.c:689 ../plugins/launcher/launcher.c:1309
+#: ../plugins/launcher/launcher.c:673 ../plugins/launcher/launcher.c:1305
 #: ../plugins/launcher/launcher-dialog.c:1146
 msgid "New Item"
 msgstr "Uusi osa"
 
-#: ../plugins/launcher/launcher.c:747 ../plugins/launcher/launcher.c:1310
+#: ../plugins/launcher/launcher.c:747 ../plugins/launcher/launcher.c:1306
 msgid "This item has not yet been configured"
 msgstr "Osaa ei ole vielä asetettu"
 
 #: ../plugins/launcher/launcher-dialog.c:101
 msgid "Default"
 msgstr "Oletus"
+
+#: ../plugins/launcher/launcher-dialog.c:102
+msgid "Editor"
+msgstr "Editori"
 
 #: ../plugins/launcher/launcher-dialog.c:103
 msgid "File management"
@@ -561,7 +529,7 @@ msgstr "Sarakkeiden lukumäärä:"
 
 #: ../plugins/pager/pager.c:364
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "Hiiren rulla vaihtaa työtilaa"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
