--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-04  Sylvain Vedrenne <gnu_sylvain@xfce.org>
+
+	* eo.po: Updated Esperanto translations by
+	  Antono Vasiljev <antonalist@gmail.com>
+
 2006-08-04  Stavros Giannouris <stavrosg2002@freemail.gr>
 
 	* el.po: Greek translation update.
