--- a/po/eo.po
+++ b/po/eo.po
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.3.90.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-01 20:04+0200\n"
-"PO-Revision-Date: 2006-03-12 20:49+0100\n"
-"Last-Translator: Sylvain Vedrenne <gnu_sylvain@xfce.org>\n"
-"Language-Team: Esperanto <translation-team-eo@lists.sourceforge.net>\n"
+"PO-Revision-Date: 2006-08-03 04:10+0300\n"
+"Last-Translator: Antono Vasiljev <antonalist@gmail.com>\n"
+"Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,33 +23,31 @@ msgstr "Komando"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "X-Terminala imitilo"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "Redaktu tekstajn dosierojn"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "Redaktilo"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
-msgstr "Dosieradministrado"
+msgstr "Dosier-administrilo"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "Administru dosierojn kaj dosierujojn"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "Krozu tra la Interreto"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "Helplegilo"
+msgstr "TTT-foliumilo"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -200,7 +198,7 @@ msgstr "Malsukcesis malfermi la modulon \"%s\""
 
 #: ../panel/panel-dialogs.c:529
 msgid "Add Items to the Panel"
-msgstr ""
+msgstr "Aldonu aĵojn al la panelo"
 
 #: ../panel/panel-dialogs.c:559
 msgid ""
@@ -396,9 +394,8 @@ msgid "Only show minimized applications"
 msgstr "Montru nur la etigitajn aplikaĵojn"
 
 #: ../plugins/iconbox/iconbox.c:839
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "Montru la taskojn de _ĉiuj laborspacoj"
+msgstr "Montru la taskojn de ĉiuj laborspacoj"
 
 #: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
 #, c-format
@@ -461,7 +458,7 @@ msgstr "Produktado"
 
 #: ../plugins/launcher/launcher-dialog.c:112
 msgid "Office"
-msgstr ""
+msgstr "Oficejaĵoj"
 
 #: ../plugins/launcher/launcher-dialog.c:113
 msgid "Sound"
@@ -555,7 +552,7 @@ msgstr "Nombro da vertikaloj:"
 
 #: ../plugins/pager/pager.c:364
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "Ŝaltu labortabulojn per musa radeto"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -632,12 +629,12 @@ msgstr "Ĉiam grupigu la taskojn"
 #: ../plugins/windowlist/windowlist.c:226
 #, c-format
 msgid "Are you sure you want to remove workspace %d?"
-msgstr ""
+msgstr "Ĉu vi certas ke vi volas kaŝi labortablon %d?"
 
 #: ../plugins/windowlist/windowlist.c:227
 #, c-format
 msgid "Are you sure you want to remove workspace '%s'?"
-msgstr ""
+msgstr "Ĉu vi certas ke vi volas kaŝi labortablon '%s'?"
 
 #: ../plugins/windowlist/windowlist.c:429
 #, c-format
@@ -676,48 +673,45 @@ msgstr ""
 #: ../plugins/windowlist/windowlist-dialog.c:155
 #, fuzzy
 msgid "Urgency Notification"
-msgstr "Uzu _lanĉa informigo"
+msgstr "Uzu lanĉan informigon"
 
 #: ../plugins/windowlist/windowlist-dialog.c:162
 msgid "_Disabled"
-msgstr ""
+msgstr "_Malebligita"
 
 #: ../plugins/windowlist/windowlist-dialog.c:171
 msgid "For _other workspaces"
-msgstr ""
+msgstr "Por a_liaj laborspacoj"
 
 #: ../plugins/windowlist/windowlist-dialog.c:180
 #, fuzzy
 msgid "For _all workspaces"
-msgstr "Montru la taskojn de _ĉiuj laborspacoj"
+msgstr "Montru la taskojn de ĉiuj l_aborspacoj"
 
 #: ../plugins/windowlist/windowlist-dialog.c:194
 #, fuzzy
 msgid "_Icon button"
-msgstr "Agaj Butonoj"
+msgstr "Piktogramaj B_utonoj"
 
 #: ../plugins/windowlist/windowlist-dialog.c:201
 msgid "A_rrow button"
-msgstr ""
+msgstr "S_ag-butonoj"
 
 #: ../plugins/windowlist/windowlist-dialog.c:219
-#, fuzzy
 msgid "Show _windows from all workspaces"
-msgstr "Montru la taskojn de _ĉiuj laborspacoj"
+msgstr "Montru la taskojn de ĉ_iuj laborspacoj"
 
 #: ../plugins/windowlist/windowlist-dialog.c:228
-#, fuzzy
 msgid "Show a_pplication icons"
-msgstr "Montru la _nomojn de la aplikaĵoj"
+msgstr "Montru la _piktogramojn de la aplikaĵoj"
 
 #: ../plugins/windowlist/windowlist-dialog.c:237
 msgid "Show wor_kspace actions"
-msgstr ""
+msgstr "Montru agojn de labor_tabulo"
 
 #: ../mcs-plugin/plugin.c:46
-#, fuzzy
 msgid "Panel"
-msgstr "Panelo %d"
+msgstr "Panelo"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
@@ -780,6 +774,5 @@ msgid "This plugin has no purpose"
 msgstr "Tiu-ĉi kromaĵo ne havas celon"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
-#, fuzzy
 msgid "Xfce 4 Panel Manager"
-msgstr "Administrilo de Panelo"
+msgstr "Xfce 4 Administrilo de Panelo"
