xfce4-panel basque translation update
(Old svn revision: 22693)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-09  Piarres Beobide <pi@beobide.net>
+
+        * eu.po: Basque translation update.
+
 2006-08-04  Sylvain Vedrenne <gnu_sylvain@xfce.org>
 
 	* eo.po: Updated Esperanto translations by
