--- a/po/eu.po
+++ b/po/eu.po
@@ -20,39 +20,36 @@ msgstr ""
 "Plural-Forms: Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "Komandoa"
+msgstr "Komando Lerroa"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "X terminal emiladorea"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "Testu fitxategiak editatu"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "Editorea"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
 msgstr "Fitxategi kudeatzailea"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "Fixtategi eta karpetak kudeatu"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "Internet nabigatu"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "Laguntza"
+msgstr "Web Nabigatzailea"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -400,9 +397,8 @@ msgid "Only show minimized applications"
 msgstr "Bakarrik txikituriko aplikazioak bistarazi"
 
 #: ../plugins/iconbox/iconbox.c:839
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "Bistarazi idazmahai birtual guztietako leihoak"
+msgstr "Bistarazi idazmahai birtual guztietako aplikazioak"
 
 #: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
 #, c-format
@@ -565,7 +561,7 @@ msgstr "Zutabe kopurua:"
 
 #: ../plugins/pager/pager.c:364
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "Idazmahai birtualak sagu erruberaren bidez txandakatu"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
