Updated traditional Chinese translations
(Old svn revision: 22720)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2006-08-12  Hydonsingore Cia <hydonsingore@educities.edu.tw>
+
+	* zh_TW.po: Updated traditional Chinese translations.
+
 2006-08-09  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update.
+	* eu.po: Basque translation update.
 
 2006-08-04  Sylvain Vedrenne <gnu_sylvain@xfce.org>
 
