updated Polish translations by piotr maliński <riklaunim@gmail.com>
(Old svn revision: 22780)

--- a/po/pl.po
+++ b/po/pl.po
@@ -20,39 +20,36 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../config/launcher-7.rc.in.h:1
-#, fuzzy
 msgid "Command Prompt"
-msgstr "Polecenie"
+msgstr "Znak Zachęty"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr ""
+msgstr "Emulator terminala X"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr ""
+msgstr "Edytuj pliki tekstowe"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
 msgstr "Edytor"
 
 #: ../config/launcher-9.rc.in.h:1
-#, fuzzy
 msgid "File Manager"
-msgstr "Menedżer plików"
+msgstr "Menadżer plików"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
-msgstr ""
+msgstr "Zarządzaj plikami i katalogami"
 
 #: ../config/launcher-10.rc.in.h:1
 msgid "Surf the internet"
-msgstr ""
+msgstr "Przeglądaj Internet"
 
 #: ../config/launcher-10.rc.in.h:2
-#, fuzzy
 msgid "Web Browser"
-msgstr "Przeglądarka pomocy"
+msgstr "Przeglądarka"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:175
@@ -399,9 +396,8 @@ msgid "Only show minimized applications"
 msgstr "Pokazuj tylko zminimalizowane aplikacje"
 
 #: ../plugins/iconbox/iconbox.c:839
-#, fuzzy
 msgid "Show applications of all workspaces"
-msgstr "Pokaż _okna ze wszystkich pulpitów"
+msgstr "Pokaż aplikacje ze wszystkich pulpitów"
 
 #: ../plugins/launcher/launcher.c:373 ../plugins/launcher/launcher.c:435
 #, c-format
@@ -563,7 +559,7 @@ msgstr "Ilość kolumn:"
 
 #: ../plugins/pager/pager.c:364
 msgid "Switch workspaces using the mouse wheel"
-msgstr ""
+msgstr "Przełącz pulpity za pomocą rolki myszy"
 
 #: ../plugins/separator/separator.c:255
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -615,7 +611,7 @@ msgstr "Użyj całej dostępnej przestrzeni"
 
 #: ../plugins/tasklist/tasklist.c:464
 msgid "Use flat buttons"
-msgstr ""
+msgstr "Użyj płaskich przycisków"
 
 #: ../plugins/tasklist/tasklist.c:481
 msgid "Show tasks from _all workspaces"
