--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2006-08-15  Jean-François Wauthy <pollux@xfce.org>
+
+	* pl.po: Updated Polish translations by piotr maliński
+	<riklaunim@gmail.com>
+
 2006-08-12  Piarres Beobide <pi@beobide.net>
 
-        * eu.po: Basque translation update.
+	* eu.po: Basque translation update.
 
 2006-08-12  Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
