--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-19  Jean-François Wauthy <pollux@xfce.org>
+
+	* gl.po: Add Galician translations
+
 2006-08-15  Jean-François Wauthy <pollux@xfce.org>
 
 	* pl.po: Updated Polish translations by piotr maliński
