--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-08-19  Jean-François Wauthy <pollux@xfce.org>
 
+	* cs.po: Updated Czech translations by Michal Varady
+	<miko.vaji@gmail.com>
 	* gl.po: Add Galician translations
 
 2006-08-15  Jean-François Wauthy <pollux@xfce.org>
