Greek translations update
(Old svn revision: 22882)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-26  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Updated Greek translations
+	
 2006-08-19  Jean-François Wauthy <pollux@xfce.org>
 
 	* cs.po: Updated Czech translations by Michal Varady
